# AION2

./: .gitignore  AION2.uproject  M_UI_GaugeFlying_HitValue_Glow_MaterialBlueprintText.txt  README.md  새 텍스트 문서.txt
AION2Server/AION2Server/: AION2Server.vcxproj  AION2Server.vcxproj.filters  CMakeLists.txt  DediSessionManager.cpp  Dungeon.cpp  Dungeon.h  Enum.pb.cc  Enum.pb.h  ItemData.h  Network.cpp  Network.h  ObjectUtils.cpp  ObjectUtils.h  OverlappedEx.h  Player.cpp  Player.h  Protocol.pb.cc  Protocol.pb.h  Room.cpp  Room.h  Source.cpp  Struct.pb.cc  Struct.pb.h  pch.h  vcpkg.json
AION2Server/AION2Server/CoreGlobal/: CoreGlobal.cpp  CoreGlobal.h  CoreTLS.cpp  CoreTLS.h
AION2Server/AION2Server/DB/: DBBind.h  DBConnection.cpp  DBConnection.h  DBConnectionPool.cpp  DBConnectionPool.h  RedisConnection.cpp  RedisConnection.h  RedisConnectionPool.cpp  RedisConnectionPool.h  RedisManager.cpp  RedisManager.h
AION2Server/AION2Server/Header/: Enum.pb.cc  Enum.pb.h  Protocol.pb.cc  Protocol.pb.h  Struct.pb.cc  Struct.pb.h
AION2Server/AION2Server/Job/: Job.h  JobQueue.cpp  JobQueue.h  JobTimer.cpp  JobTimer.h  LockQueue.h  ThreadManager.cpp  ThreadManager.h
AION2Server/AION2Server/Network/: IocpCore.cpp  IocpCore.h  IocpEvent.h  Listener.cpp  Listener.h  NetAddress.cpp  NetAddress.h  PacketHandler.cpp  PacketHandler.h  Protocol.h  Service.cpp  Service.h
AION2Server/AION2Server/Player/: Player.cpp  Player.h
AION2Server/AION2Server/Room/: Dungeon.cpp  Dungeon.h  Room.cpp  Room.h
AION2Server/AION2Server/Session/: DediSessionManager.h  DedicateSession.cpp  Session.cpp  (+8 more)
(+10422 files in other folders)
